Working changes with Java 9